codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__foreign_image_attachment_history_snapshot.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 877
expression: combined
---
• Viewed Image
  └ C:\workspace\assets\example.png
